force-app/main/default/objects/Contract/fields/stripeGC__Subscription_Schedule__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Subscription_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription Schedule</label>
    <referenceTo>stripeGC__Subscription_Schedule__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>