force-app/main/default/objects/Contract/fields/stripeGC__Subscription_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Subscription_Schedule_Id__c</fullName>
    <label>Stripe Subscription Schedule ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>